@@ -1,5 +1,7 @@
 2003-02-24  Ulrich Drepper  <drepper@redhat.com>
 
+	* sem_open.c (sem_open): Fix handling of O_CREAT without O_EXCL.
+
 	* tst-cond2.c: Fix sychronization with child.
 
 	* tst-rwlock8.c (reader_thread): Remove unused variable.
